# ChangeLog for dev-haskell/alex
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/alex/ChangeLog,v 1.46 2011/07/31 15:38:07 slyfox Exp $

*alex-2.3.5 (31 Jul 2011)

  31 Jul 2011; Sergei Trofimovich <slyfox@gentoo.org> +alex-2.3.5.ebuild,
  +files/alex-2.3.5-ghc-7.2.patch, +files/alex-2.3.5-missing-test.patch:
  Version bump. Added tests support.

  27 Feb 2011; Sergei Trofimovich <slyfox@gentoo.org> -alex-2.1.0.ebuild,
  -alex-2.2.ebuild:
  removed old

  25 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> alex-2.3.2.ebuild:
  ppc/ppc64 stable wrt #339161

  14 Nov 2010; Sergei Trofimovich <slyfox@gentoo.org> alex-2.3.1.ebuild,
  alex-2.3.2.ebuild:
  alpha stable (bug #339161)

  14 Nov 2010; Sergei Trofimovich <slyfox@gentoo.org> alex-2.3.1.ebuild:
  ia64 stable (bug #339161)

  12 Jul 2010; Sergei Trofimovich <slyfox@gentoo.org> alex-2.3.2.ebuild:
  Marked ~alpha

*alex-2.3.2 (28 Mar 2010)

  28 Mar 2010; Lennart Kolmodin <kolmodin@gentoo.org> +alex-2.3.2.ebuild:
  Version bump to 2.3.2.

  25 Dec 2009; <kolmodin@gentoo.org> alex-2.3.1.ebuild:
  Add ~ppc64, tested by trofi.

  20 May 2009; Tiago Cunha <tcunha@gentoo.org> alex-2.3.1.ebuild:
  stable sparc, bug 268074

  13 May 2009; Christian Faulhammer <fauli@gentoo.org> alex-2.3.1.ebuild:
  stable x86, bug 268074

  01 May 2009; Lennart Kolmodin <kolmodin@gentoo.org> alex-2.3.1.ebuild:
  amd64 stable

*alex-2.3.1 (08 Feb 2009)

  08 Feb 2009; Lennart Kolmodin <kolmodin@gentoo.org> +alex-2.3.1.ebuild:
  Version bump, works with cabal-1.6

  26 Jan 2008; Duncan Coutts <dcoutts@gentoo.org> -alex-2.0.1-r1.ebuild,
  alex-2.1.0.ebuild, alex-2.2.ebuild:
  Fix qa bug #207490 and remove old version.

*alex-2.2 (14 Dec 2007)

  14 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> +alex-2.2.ebuild:
  New version that works with cabal-1.2.x

  12 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> alex-2.1.0.ebuild: