@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/alex/Attic/alex-2.3.5.ebuild,v 1.1 2011/07/31 15:38:07 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/alex/Attic/alex-2.3.5.ebuild,v 1.2 2012/02/24 09:39:59 ago Exp $
 
 # ebuild generated by hackport 0.2.9
 
@@ -15,7 +15,7 @@ SRC_URI="http://hackage.haskell.org/packages/archive/${PN}/${PV}/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE="doc"
 
 RDEPEND=""
