@@ -1,6 +1,9 @@
 # ChangeLog for dev-haskell/alex
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/alex/ChangeLog,v 1.46 2011/07/31 15:38:07 slyfox Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/alex/ChangeLog,v 1.47 2012/02/24 09:39:59 ago Exp $
+
+  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> alex-2.3.5.ebuild:
+  Stable for amd64, wrt bug #399965
 
 *alex-2.3.5 (31 Jul 2011)
 
